# gitpod-cpp-project-template

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  README.md  conanfile.txt  main.cpp
.github/workflows/: cmake.yml  workflow.yml
docs/: Doxyfile.in  README.md
include/: example.hpp  rquantities.hpp
src/: main.cpp
tests/: test_main.cpp
